# value-router-solana

./: .gitignore  Anchor.toml  package-lock.json  package.json
app/: .env  Anchor.toml  README.md  abi.json  bridge.ts  closeAuthorityAccount.ts  convertAddress.js  convertAddress.ts  findEvmMessage.ts  findSolMessage.ts  getAccount.ts  getAta.js  getEvmMessage.js  getFees.ts  getTx.ts  initTokenAccount.ts  initUsdcAccount.ts  initialize.ts  inspectAccount.ts  jupiter.ts  jupiterSwap.ts  package-lock.json  package.json  receiveMessage.ts  reclaim.ts  relay.ts  relayDataAccount.json  relayEvm2Sol.ts  relaySol2Evm.ts  retry.sh  setAdmin.ts  setValueRouter.ts  setupALT.ts  swapAndBridge.ts  tryTx.ts  utils.ts  wrapWsol.ts
docs/: Addresses.md  Noble<->Solana.md  crates.js  settings.html
docs/CCTPMessageReceiver/: crates.js  help.html  search-index.js  settings.html  src-files.js
docs/ValueRouter/: crates.js  (+3 more)
programs/cctp_message_receiver/: Cargo.toml
programs/cctp_message_receiver/src/: lib.rs
programs/value-router/: Cargo.toml  tmp-solana-bpf-tools-osx.tar.bz2
programs/value-router/src/: constants.rs  errors.rs  jupiter.rs  lib.rs  lib.rs.bak  state.rs  swap_message.rs  utils.rs
programs/value-router/src/instructions/: close_program_authority.rs  create_relay_data.rs  init_recipient_token_accounts.rs  initialize.rs  mod.rs  post_bridge_message.rs  post_swap_message.rs  reclaim.rs  relay.rs  relay_no_swap.rs  set_admin.rs  set_value_router.rs  swap_and_bridge.rs  swap_and_bridge_share_event_accounts.rs
tests/: value-router.ts
vr-docs/: Addresses.md
(+144 files in other folders)
