[package]
name = "cctp_message_receiver"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "cctp_message_receiver"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
lazy_static = "1.4"
anchor-lang = { version = "=0.28.0", features = [
    "init-if-needed",
    "event-cpi",
] }
solana-program = "1.16.9"
message-transmitter = { path = "../message-transmitter", features = [
    "no-entrypoint",
    "cpi",
] }
token-messenger-minter = { path = "../token-messenger-minter", features = [
    "no-entrypoint",
    "cpi",
] }
hex = "0.4.3"

